hphp/test/zend/good/ext/gd/tests/colorexact.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!function_exists('imagecolorexact')) die("skip gd extension not available\n");
}
