hphp/test/zend/bad/ext/pgsql/tests/26async_query_prepared.php.skipif
<?php
include("skipif.inc");
if (!function_exists('pg_send_prepare')) die('skip function pg_send_prepare() does not exist');
?>